# microsoft-agents-lab

./: .env.example  README.md  main.py  pyproject.toml  tutorial_basic.py  tutorial_function_tools.py  tutorial_function_tools_approvals.py  tutorial_mcp_server.py  tutorial_mcp_server_http.py  tutorial_multiturn.py  tutorial_streaming.py  tutorial_system_message.py  tutorial_with_image.py
